nginx-with-volume/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  # Replace ip with your public one
  # To find your public IP run command : sh ../my-public-ip.sh
  - host: nginx.35.226.186.59.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: task-pv-svc
            port:
              number: 80
